--- a/public/chatSelections.html
+++ b/public/chatSelections.html
@@ -77,6 +77,7 @@
         event.preventDefault()
         location = `chatRoom.html?username=${localStorage.getItem('username')}&room=${document.getElementById('room').value}`
         localStorage.setItem('room', document.getElementById('room').value)
+        axios.post('/api/rooms', document.getElementById('room').value)
       })
 
       async function logOut() {
